--- a/math/xmgr/Makefile
+++ b/math/xmgr/Makefile
@@ -1,28 +1,32 @@
 # New ports collection makefile for:	xmgr
-# Version required:	3.01pl8
+# Version required:	4.1.1
 # Date created:		So   2 Mär 1997 12:11:43 MET
 # Whom:			Andreas Klemm <andreas@klemm.gtn.com>
 #
-# $Id: Makefile,v 1.4 1998/04/30 08:37:07 tg Exp $
+# $Id: Makefile,v 1.5 1998/04/30 08:40:07 tg Exp $
 #
 
-DISTNAME=	xmgr-3.01
-CATEGORIES=	print
-MASTER_SITES=	${MASTER_SITE_XCONTRIB}
-MASTER_SITE_SUBDIR=	applications
+DISTNAME=	xmgr-4.1.1
+CATEGORIES=	math print
+MASTER_SITES=	ftp://plasma-gate.weizmann.ac.il/pub/xmgr4/src/ \
+		ftp://fire.mpi-stuttgart.mpg.de/pub/mirror/xmgr4/src/ \
+		ftp://wauug.erols.com/pub/X-Windows/xmgr4/src/
 
-MAINTAINER=	andreas@FreeBSD.ORG
+MAINTAINER=	Lars.Koeller@Uni-Bielefeld.DE
 
-WRKSRC=			${WRKDIR}/xmgr-3.01pl8/src
-USE_IMAKE=		yes
-REQUIRES_MOTIF=		yes
-NO_INSTALL_MANPAGES=	yes
+BUILD_DEPENDS=	${X11BASE}/lib/libhlpclient.a:${PORTSDIR}/x11/libhelp \
+		${LOCALBASE}/lib/libmfhdf.a:${PORTSDIR}/graphics/hdf
+LIB_DEPENDS=	Xbae\\.6\\.:${PORTSDIR}/x11/xbae
 
-pre-extract:
-	@$(ECHO_MSG) "Xinside Motif ? Then put this into /etc/make.conf:"
-	@$(ECHO_MSG) "    MOTIFLIB=-L\${X11BASE}/lib -lXm -lXintl"
+USE_X11=	YES
+REQUIRE_MOTIF=	YES
+HAS_CONFIGURE=	YES
+CONFIGURE_ARGS=	-prefix=${X11BASE} \
+	--enable-extra-incpath=${X11BASE}/include/X11:${LOCALBASE}/include \
+	--enable-extra-ldpath=${LOCALBASE}/lib --enable-libhelp \
+	--enable-mfhdf --enable-acegr-home=${X11BASE}/lib/X11/xmgr
 
-post-install:
-	@( cd ${X11BASE}/bin; ln -sf xmgr grbatch )
+ALL_TARGET=
+INSTALL_TARGET=	install links
 
 .include <bsd.port.mk>
