--- a/japanese/sed/Makefile
+++ b/japanese/sed/Makefile
@@ -3,12 +3,12 @@
 # Date created:		2 April 1995
 # Whom:			Nobuhiro Yasutomi <nobu@psrc.isac.co.jp>
 #
-# $Id: Makefile,v 1.4 1997/09/14 21:35:54 max Exp $
+# $Id: Makefile,v 1.5 1997/12/25 22:29:41 asami Exp $
 #
 
 DISTNAME=	sed-1.18
 PKGNAME=	ja-sed-1.18
-CATEGORIES=	japanese
+CATEGORIES=	japanese textproc
 MASTER_SITES=	${MASTER_SITE_GNU}
 
 MAINTAINER=	ports@FreeBSD.ORG
