--- a/comms/kremotecontrol/Makefile
+++ b/comms/kremotecontrol/Makefile
@@ -3,7 +3,7 @@
 # Date created:        28 October 1997
 # Whom:                Stefan Eßer <se@freebsd.org>
 #
-# $Id: Makefile,v 1.9 1998/04/27 20:45:04 se Exp $
+# $Id: Makefile,v 1.10 1998/04/28 04:33:57 asami Exp $
 #
 
 DISTNAME=	kdeutils-beta4-1
@@ -26,8 +26,6 @@ LIB_DEPENDS=	qt\\.1\\.3[1-9]:${PORTSDIR}/x11/qt \
 		khtmlw\\.0\\.9[1-9]:${PORTSDIR}/x11/kdelibs \
 		kfm\\.0\\.9[0-9]:${PORTSDIR}/x11/kdelibs \
 		mediatool\\.0\\.9[1-9]:${PORTSDIR}/x11/kdelibs
-
-BROKEN=		package
 
 EXTRACT_CMD=	bzip2
 EXTRACT_BEFORE_ARGS= -cd
