--- a/editors/cooledit/Makefile
+++ b/editors/cooledit/Makefile
@@ -3,7 +3,7 @@
 # Date created:		18 November 1997
 # Whom:			brett@peloton.physics.montana.edu
 #
-# $Id$
+# $Id: Makefile,v 1.1.1.1 1998/04/19 05:14:17 mph Exp $
 #
 
 DISTNAME=	cooledit-3.6.0
@@ -18,6 +18,10 @@ LIB_DEPENDS=    Xpm\\.4\\.:${PORTSDIR}/graphics/xpm
 GNU_CONFIGURE=	yes
 CONFIGURE_ARGS=	--disable-mail-author --disable-static
 USE_GMAKE= 	yes
+
+post-extract:
+	@${CP} ${FILESDIR}/ltconfig-1.2 ${WRKSRC}/ltconfig
+	@${CP} ${FILESDIR}/ltmain.sh-1.2 ${WRKSRC}/ltmain.sh
 
 pre-install:
 	@${ECHO_MSG} "Installing in ${PREFIX}/bin"
